# cohere

./: .env.example  Cargo.toml
cohere/: Cargo.toml
cohere/src/: lib.rs
cohere/src/client/: http.rs  mod.rs
cohere/src/cmlt/: mod.rs  tracing.rs
cohere/src/env/: env.rs  mod.rs
cohere/src/instrument/: logging.rs  mod.rs  tracing.rs
cohere/src/secure/: mod.rs  totp.rs
cohere/src/server/: http.rs  mod.rs
example/: Cargo.toml
example/src/: main.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
