[package]
edition = "2024"
name = "cohere"
version = "0.1.0"

[dependencies]
base32 = "0.5.1"
envy = "0.4.2"
hmac = "0.12"
once_cell = "1.21.3"
opentelemetry = "0.29.1"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = "0.29.0"
serde = "1.0.219"
sha1 = "0.10"
tokio = { version = "1.45.0", features = ["full"] }
