[package]
edition = "2024"
name = "cohere"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
base32 = "0.5.1"
dashmap = "6.1.0"
envy = "0.4.2"
hmac = "0.12"
once_cell = "1.21.3"
opentelemetry = "0.29.1"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = "0.29.0"
parking_lot = "0.12.1"
ring = "0.17.14"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.107"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
uuid = { version = "1.4.1", features = ["v4"] }
