[package]
edition = "2024"
name = "helloworld"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
cohere = { path = "../../cohere" }
opentelemetry = "0.29.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
